# actionable-finance

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  opencode.jsonc.example  opencode.jsonc.template  pyproject.toml  railway.toml  telegram-targets.example.json  telegram-targets.json
.claude/agents/: daily-summary-agent.md
.claude/commands/: daily-summary.md  user-action.md
.claude/skills/daily-summary/: SKILL.md
.claude/skills/telegram-collector/: SKILL.md
.claude/skills/telegram-collector/scripts/: setup_targets.py
.claude/skills/user-action/: SKILL.md
.claude/skills/user-action/scripts/: get_bot_messages.py
.opencode/agents/: coin-trading.md  daily-summary.md  scheduler-manager.md  stock-trading.md
.opencode/commands/: daily-summary.md  upbit-trading.md  user-action.md
.opencode/skills/binance-trading/: SKILL.md
.opencode/skills/binance-trading/scripts/: cancel_order.py  get_balance.py  get_markets.py  get_ohlcv.py  get_orderbook.py  get_orders.py  get_ticker.py  margin_loan.py  margin_ltv.py  (+1 more)
.opencode/skills/daily-summary/: SKILL.md
.opencode/skills/data-visualization/: SKILL.md
.opencode/skills/kis-trading/: SKILL.md
.opencode/skills/scheduler/: SKILL.md
.opencode/skills/telegram-collector/: SKILL.md
.opencode/skills/upbit-trading/: SKILL.md
.opencode/skills/user-action/: SKILL.md
app/: __init__.py  config.py  handlers.py  main.py  scheduler.py  telegram.py
scripts/: entrypoint.sh  generate_session.py  get_chat_id.py  send_telegram.py  send_telegram_image.py  telegram_webhook.py
(+23 files in other folders)
